# cds-auth-proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app  app.py  pyproject.toml  run.py
.github/workflows/: tests.yml
app/: app.py  cli.py  constants.py  utils.py
config/: hypercorn_config.py  logconfig.json
src/cds_auth_proxy/: app.py  cli.py  model.py
tests/: smoke.py
