[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cds-auth-proxy"
description = "Simple tool provide auth proxy for cds video stream."
authors = [{ name = "cubercsl", email = "hi@cubercsl.site" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "cryptography>=44.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "granian>=1.7.6",
    "httpx>=0.28.1",
    "rich>=13.9.4",
]
dynamic = ["version"]

[project.scripts]
cds-auth-proxy = "cds_auth_proxy.cli:entrypoint"

[tool.hatch.version.raw-options]
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--tags",
  "--long",
  "--first-parent",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/cds_auth_proxy/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 127

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "uvicorn>=0.34.0",
    "pytest>=8.0.0",
]
